clean-slate/src/snapshots/clean_slate__parse_modal_spans__tests__snapshot_motion.snap
---
source: clean-slate/src/parse_modal_spans.rs
expression: "Motion::parse(\"G0\".into())"

---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Spanned {
            start: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "",
                extra: (),
            },
            end: LocatedSpan {
                offset: 2,
                line: 1,
                fragment: "",
                extra: (),
            },
            item: Rapid,
        },
    ),
)
